# KernelPanicsAgain

./: .gitignore  Cargo.toml  README.md
GUI/: file_choosing_window.glade~  main.rs  view1.glade  view1.glade~
GUI/main_window/: imp.rs  mod.rs  view1.glade~
UI/: file_choosing_window.glade  main.rs  view1.glade  view1.glade~
UI/main_window/: view1.glade
src/: bdecoding.rs  bittorrent_engine.rs  config.rs  lib.rs  main.rs  torrent_client.rs  url_encoding.rs  urlencoding.rs  utils.rs
src/client/: client_side.rs  mod.rs  peer.rs  peer_protocol.rs  piece.rs  single_file.rs  torrent.rs  torrent_decoder.rs  torrent_decoding.rs  torrent_piece.rs  torrent_worker.rs  tracker_decoding.rs  tracker_info.rs
src/client/download/: download_info.rs  download_pool.rs  download_worker.rs  download_worker_state.rs  mod.rs  peer.rs  peer_protocol.rs
src/file_reader/: mod.rs  torrent_file.rs
src/html/: test.json
src/logger/: logger_worker.rs  mod.rs  torrent_logger.rs
src/logging/: log_handle.rs  log_worker.rs  logger.rs  mod.rs
src/messages/: message_parser.rs  mod.rs  peer_message.rs
src/messages/message_type/: bitfield.rs  mod.rs  (+9 more)
src/server/: mod.rs  server_side.rs
src/ui_notification_structs/: metadata.rs  mod.rs  peer_state.rs  torrent_state.rs  ui_notification.rs
tests/: aux.torrent  bla.torrent  linuxmint.torrent  logtest.txt  lubuntu.torrent  mxlinux.torrent  rocky.torrent  ultramarine.torrent
tracker/: main.rs
tracker/server/: bitTorrent.js  stats.html
tracker_client/: main.rs
tracker_server/server/: data.json  mod.rs  not-found.html  web_server.rs
(+25 files in other folders)
