[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.1"
rand = "0.8.5"
log = { version = "0.4.17", features = ["std", "serde"] }
gtk = "0.15.5"
chrono = "0.4.19"
native-tls = "0.2.10"
serde_json = " 1.0.84"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "gui"
path = "./GUI/main.rs"

[[bin]]
name = "tracker"
path = "./tracker/main.rs"